force-app/main/default/objects/Transfer_Amount__c/Transfer_Amount__c.object-meta.xml
<CustomObject>
    <label>Transfer Amount</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Transfer Amount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Amounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>