force-app/main/default/objects/Transfer_Amount__c/fields/Bank_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Bank_Reference_No__c</fullName>
    <label>Bank Reference No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>