force-app/main/default/objects/Transfer_Amount__c/fields/Business_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Code__c</fullName>
    <formula>Unit__r.Tower__r.Business_Unit_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Code</label>
    <type>Text</type>
</CustomField>