force-app/main/default/objects/Transfer_Amount__c/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Account</label>
    <referenceTo>Account_Master__c</referenceTo>
    <relationshipLabel>Transfer Accounts</relationshipLabel>
    <relationshipName>Transfer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>