force-app/main/default/objects/Transfer_Amount__c/fields/Instrument_No__c.field-meta.xml
<CustomField>
    <fullName>Instrument_No__c</fullName>
    <label>Instrument No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>