force-app/main/default/objects/Transfer_Amount__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transfer Accounts</relationshipLabel>
    <relationshipName>Transfer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>