force-app/main/default/objects/Transfer_Amount__c/fields/To_Account__c.field-meta.xml
<CustomField>
    <fullName>To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Account</label>
    <referenceTo>Account_Master__c</referenceTo>
    <relationshipLabel>Transfer Accounts (To Account)</relationshipLabel>
    <relationshipName>Transfer_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>