force-app/main/default/objects/Transfer_Amount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>GL_Date__c</columns>
    <columns>Transfer_Date__c</columns>
    <columns>Unit__c</columns>
    <columns>Amount__c</columns>
    <columns>From_Account__c</columns>
    <columns>To_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>